# windfarm-gnn

./: .gitignore  environment.yaml  pyproject.toml  requirements.txt
gnn_framework/: config.yml  predict.py  train.py
gnn_framework/data/: compute_dataset_stats.py
gnn_framework/finetuning/: finetune.py  ft_config.yml
gnn_framework/models/: windfarmgnn.py
graph_farms/: generate_graphs.py  layout_gen.py  pywake_sim.py  utils.py
notebooks/: compare_connectivities.ipynb  compare_loads_models.ipynb
windfarm-gnn-pretrained/pretrained_GEN_model/: config.yml
