[project]
name = "windfarm-gnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
      "joblib==1.3.2",
      "matplotlib==3.7.3",
      "numpy==1.24.4",
      "pandas==2.1.4",
      "py-wake==2.5.0",
      "python-box==7.1.1",
      "pyyaml==6.0.1",
      "scikit-learn==1.3.2",
      "scipy==1.10.1",
      "seaborn==0.12.2",
      "setuptools>=80.9.0",
      "torch==2.3.1",
      "torch-geometric==2.3.1",
      "windrose==1.9.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
